--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="nl">
 	<head>
 		<meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Challenge1</title>
 		<link type="text/css" href="styles/my_style.css" rel="stylesheet" />
 		<script type="text/javascript" src="scripts/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="scripts/my_scripts.js"></script>
+		<script type="text/javascript" src="scripts/my_scripts.js"></script>        
 	</head>
 	<body>
 		<h1>Reizen naar Mars</h1>
         <h2>2030</h2>
-        
         
 	</body>
 </html>
