--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		<script type="text/javascript" src="scripts/my_scripts.js"></script>        
 	</head>
 	<body>
-		<h1>Reizen naar Mars</h1>
-        <h2>2030</h2>
+		<h1>Reizen naar Mars,2030</h1>
         
 	</body>
 </html>
