--- a/index.html
+++ b/index.html
@@ -14,43 +14,38 @@
         <hr>
         <div id="chart_div" style="width: 400px; height: 120px;"></div>
 
-         <script type="text/javascript">
-      google.charts.load('current', {'packages':['gauge']});
-      google.charts.setOnLoadCallback(drawChart);
+        <script type="text/javascript">
+              google.charts.load('current', {'packages':['gauge']});
+              google.charts.setOnLoadCallback(drawChart);
 
-      function drawChart() {
+              function drawChart() {
 
-        var data = google.visualization.arrayToDataTable([
-          ['Label', 'Value'],
-          ['Memory', 80],
-          ['CPU', 55],
-          ['Network', 68]
-        ]);
+                var data = google.visualization.arrayToDataTable([
+                  ['Label', 'Value'],
+                  ['Lancering', 127.800kN],
+                  ['Solar', 200kW],
+                ]);
 
-        var options = {
-          width: 400, height: 120,
-          redFrom: 90, redTo: 100,
-          yellowFrom:75, yellowTo: 90,
-          minorTicks: 5
-        };
+                var options = {
+                  width: 400, height: 120,
+                  redFrom: 90, redTo: 100,
+                  yellowFrom:75, yellowTo: 90,
+                  minorTicks: 5
+                };
 
-        var chart = new google.visualization.Gauge(document.getElementById('chart_div'));
+                var chart = new google.visualization.Gauge(document.getElementById('chart_div'));
 
-        chart.draw(data, options);
+                chart.draw(data, options);
 
-        setInterval(function() {
-          data.setValue(0, 1, 40 + Math.round(60 * Math.random()));
-          chart.draw(data, options);
-        }, 13000);
-        setInterval(function() {
-          data.setValue(1, 1, 40 + Math.round(60 * Math.random()));
-          chart.draw(data, options);
-        }, 5000);
-        setInterval(function() {
-          data.setValue(2, 1, 60 + Math.round(20 * Math.random()));
-          chart.draw(data, options);
-        }, 26000);
-      }
+                setInterval(function() {
+                  data.setValue(0, 1, 40 + Math.round(60 * Math.random()));
+                  chart.draw(data, options);
+                }, 13000);
+                setInterval(function() {
+                  data.setValue(1, 1, 40 + Math.round(60 * Math.random()));
+                  chart.draw(data, options);
+                }, 5000);
+              }
     </script>
 	</body>
 </html>
