--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        </div>
         
        <script>
-           let myChart = document.getElementById('myChart').getContext(2d);
+           let myChart = document.getElementById('myChart').getContext('2d');
            
            let NewChart = new Chart(myChart, {
                type:'bar', //bar, pie, line, Area
