--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Challenge1</title>
-		<link type="text/css" href="voorbeeldchallenge.css" rel="stylesheet" />     
+		<link type="text/css" href="styles/my_style.css"rel="stylesheet" />     
 	</head>
     <body>
         
