--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="col">
                         <div class="card">
                             <div class="card-content">
-                                <h2>Mars & Aarde</h2>
+                                <h2>Duur van de reis (in maanden)</h2>
                                 <canvas id="myFifthChart"></canvas>
                                 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
                             </div>
@@ -274,14 +274,14 @@
             let myFifthChart = new Chart(PIECHART , {
                 type:'pie',
                 data:{
-                    labels:["Mars", "Aarde"],
+                    labels:["looptijd", "verblijfsduur"],
                     datasets:[
                         {
-                            label: "Temperatuur",
+                            label: "lootijd",
                             fill: false,
                             backgroundColor:"rgba(75,192,192,0.4)",
-                            borderColor:"rgba(75,192,192,1)",
-                            borderWidth:2,
+                            borderColor:"yellow",
+                            borderWidth:1,
                              borderCapStyle: 'butt',
                             borderDash:[],
                             borderDash0ffset: 0.0,
@@ -295,27 +295,7 @@
                             pointHoverBorderWidth:2,
                             pointRadius:1,
                             pointHitRadius:10,
-                            data:[49.5,77.5],
-                        },{
-                            label:"Atmosfeer",
-                             fill: false,
-                            backgroundColor:"rgba(75,192,192,1)",
-                            borderColor:"rgba(75,192,192,1)",
-                            borderWidth:2,
-                             borderCapStyle: 'butt',
-                            borderDash:[],
-                            borderDash0ffset: 0.0,
-                            borderJoinStyle: 'miter',
-                            pointBorderColor:"rbga(75,192,192,1)",
-                            pointBackgroundColor: "yellow",
-                            pointBorderWidth:1,
-                            pointHoverRadius:5,
-                            pointHoverBackgroundColor:"rgba(75,192,192,1)",
-                            pointHoverBorderColor:"rgba(220,220,220,1)",
-                            pointHoverBorderWidth:2,
-                            pointRadius:1,
-                            pointHitRadius:10,
-                            data:[17,12],
+                            data:[8,2],
                         }
                     ]
                 }
