--- a/index.html
+++ b/index.html
@@ -280,15 +280,15 @@
                             label: "lootijd",
                             fill: false,
                             backgroundColor:"rgba(75,192,192,0.4)",
-                            borderColor:"yellow",
-                            borderWidth:1,
+                            borderColor:"rgba(75,192,192,1)",
+                            borderWidth:2,
                              borderCapStyle: 'butt',
                             borderDash:[],
                             borderDash0ffset: 0.0,
                             borderJoinStyle: 'miter',
                             pointBorderColor:"rbga(75,192,192,1)",
-                            pointBackgroundColor: "yellow",
-                            pointBorderWidth:1,
+                            pointBackgroundColor: "rgba(75,192,192,1)",
+                            pointBorderWidth:2,
                             pointHoverRadius:5,
                             pointHoverBackgroundColor:"rgba(75,192,192,1)",
                             pointHoverBorderColor:"rgba(220,220,220,1)",
