--- a/index.html
+++ b/index.html
@@ -101,18 +101,18 @@
                         {
                             label: "kW of power",
                             fill: false,
-                            backgroundColor:"rgba(75,192,192,0.4)",
-                            borderColor:"rgba(75,192,192,1)",
+                            backgroundColor:"#386363",
+                            borderColor:"#4BC0C0",
                             borderWidth:2,
                              borderCapStyle: 'butt',
                             borderDash:[],
                             borderDash0ffset: 0.0,
                             borderJoinStyle: 'miter',
-                            pointBorderColor:"rbga(75,192,192,1)",
-                            pointBackgroundColor: "yellow",
+                            pointBorderColor:"#4BC0C0",
+                            pointBackgroundColor: "#386363",
                             pointBorderWidth:1,
                             pointHoverRadius:5,
-                            pointHoverBackgroundColor:"rgba(75,192,192,1)",
+                            pointHoverBackgroundColor:"#386363",
                             pointHoverBorderColor:"rgba(220,220,220,1)",
                             pointHoverBorderWidth:2,
                             pointRadius:1,
@@ -136,19 +136,19 @@
                         {
                             label: "My first database",
                             fill: false,
-                            backgroundColor:"rgba(75,192,192,0.4)",
-                            borderColor:"rgba(75,192,192,1)",
+                            backgroundColor:"#386363",
+                            borderColor:"#4BC0C0",
                             borderWidth:2,
                              borderCapStyle: 'butt',
                             borderDash:[],
                             borderDash0ffset: 0.0,
                             borderJoinStyle: 'miter',
-                            pointBorderColor:"rbga(75,192,192,1)",
-                            pointBackgroundColor: "yellow",
+                            pointBorderColor:"#4BC0C0",
+                            pointBackgroundColor: "#386363",
                             pointBorderWidth:1,
                             pointHoverRadius:5,
-                            pointHoverBackgroundColor:"rgba(75,192,192,1)",
-                            pointHoverBorderColor:"rgba(220,220,220,1)",
+                            pointHoverBackgroundColor:"#386363",
+                            pointHoverBorderColor:"#4BC0C0",
                             pointHoverBorderWidth:2,
                             pointRadius:1,
                             pointHitRadius:10,
@@ -170,18 +170,18 @@
                         {
                             label: "Lengte",
                             fill: false,
-                            backgroundColor:"rgba(75,192,192,0.4)",
-                            borderColor:"rgba(75,192,192,1)",
+                            backgroundColor:"#386363",
+                            borderColor:"#4BC0C0",
                             borderWidth:2,
                              borderCapStyle: 'butt',
                             borderDash:[],
                             borderDash0ffset: 0.0,
                             borderJoinStyle: 'miter',
-                            pointBorderColor:"rbga(75,192,192,1)",
-                            pointBackgroundColor: "yellow",
+                            pointBorderColor:"#4BC0C0",
+                            pointBackgroundColor: "#386363",
                             pointBorderWidth:1,
                             pointHoverRadius:5,
-                            pointHoverBackgroundColor:"rgba(75,192,192,1)",
+                            pointHoverBackgroundColor:"#386363",
                             pointHoverBorderColor:"rgba(220,220,220,1)",
                             pointHoverBorderWidth:2,
                             pointRadius:1,
@@ -190,18 +190,18 @@
                         },{
                             label:"Diameter",
                              fill: false,
-                            backgroundColor:"rgba(75,192,192,1)",
-                            borderColor:"rgba(75,192,192,1)",
+                            backgroundColor:"#1E3737",
+                            borderColor:"#4BC0C0",
                             borderWidth:2,
                              borderCapStyle: 'butt',
                             borderDash:[],
                             borderDash0ffset: 0.0,
                             borderJoinStyle: 'miter',
-                            pointBorderColor:"rbga(75,192,192,1)",
-                            pointBackgroundColor: "yellow",
+                            pointBorderColor:"#4BC0C0",
+                            pointBackgroundColor: "#386363",
                             pointBorderWidth:1,
                             pointHoverRadius:5,
-                            pointHoverBackgroundColor:"rgba(75,192,192,1)",
+                            pointHoverBackgroundColor:"#1E3737",
                             pointHoverBorderColor:"rgba(220,220,220,1)",
                             pointHoverBorderWidth:2,
                             pointRadius:1,
@@ -225,40 +225,40 @@
                         {
                             label: "Temperatuur",
                             fill: false,
-                            backgroundColor:"rgba(75,192,192,0.4)",
-                            borderColor:"rgba(75,192,192,1)",
+                            backgroundColor:"#386363",
+                            borderColor:"#4BC0C0",
                             borderWidth:2,
                              borderCapStyle: 'butt',
                             borderDash:[],
                             borderDash0ffset: 0.0,
                             borderJoinStyle: 'miter',
-                            pointBorderColor:"rbga(75,192,192,1)",
-                            pointBackgroundColor: "yellow",
+                            pointBorderColor:"#4BC0C0",
+                            pointBackgroundColor: "#386363",
                             pointBorderWidth:1,
                             pointHoverRadius:5,
-                            pointHoverBackgroundColor:"rgba(75,192,192,1)",
-                            pointHoverBorderColor:"rgba(220,220,220,1)",
-                            pointHoverBorderWidth:2,
+                            pointHoverBackgroundColor:"#386363",
+                            pointHoverBorderColor:"#4BC0C0",
+                            pointHoverBorderWidth:1,
                             pointRadius:1,
                             pointHitRadius:10,
                             data:[49.5,77.5],
                         },{
                             label:"Atmosfeer",
                              fill: false,
-                            backgroundColor:"rgba(75,192,192,1)",
-                            borderColor:"rgba(75,192,192,1)",
+                            backgroundColor:"#1E3737",
+                            borderColor:"#4BC0C0",
                             borderWidth:2,
                              borderCapStyle: 'butt',
                             borderDash:[],
                             borderDash0ffset: 0.0,
                             borderJoinStyle: 'miter',
-                            pointBorderColor:"rbga(75,192,192,1)",
-                            pointBackgroundColor: "yellow",
+                            pointBorderColor:"#4BC0C0",
+                            pointBackgroundColor: "#1E3737",
                             pointBorderWidth:1,
                             pointHoverRadius:5,
-                            pointHoverBackgroundColor:"rgba(75,192,192,1)",
-                            pointHoverBorderColor:"rgba(220,220,220,1)",
-                            pointHoverBorderWidth:2,
+                            pointHoverBackgroundColor:"#1E3737",
+                            pointHoverBorderColor:"#4BC0C0",
+                            pointHoverBorderWidth:1,
                             pointRadius:1,
                             pointHitRadius:10,
                             data:[17,12],
@@ -279,18 +279,18 @@
                         {
                             label: "lootijd",
                             fill: false,
-                            backgroundColor:"rgba(75,192,192,0.4)",
-                            borderColor:"rgba(75,192,192,1)",
+                            backgroundColor:"#386363",
+                            borderColor:"#4BC0C0",
                             borderWidth:2,
                              borderCapStyle: 'butt',
                             borderDash:[],
                             borderDash0ffset: 0.0,
                             borderJoinStyle: 'miter',
                             pointBorderColor:"rbga(75,192,192,1)",
-                            pointBackgroundColor: "rgba(75,192,192,1)",
+                            pointBackgroundColor: "#4BC0C0",
                             pointBorderWidth:2,
                             pointHoverRadius:5,
-                            pointHoverBackgroundColor:"rgba(75,192,192,1)",
+                            pointHoverBackgroundColor:"#386363",
                             pointHoverBorderColor:"rgba(220,220,220,1)",
                             pointHoverBorderWidth:2,
                             pointRadius:1,
