--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             pointBorderWidth:1,
                             pointHoverRadius:5,
                             pointHoverBackgroundColor:"#386363",
-                            pointHoverBorderColor:"rgba(220,220,220,1)",
+                            pointHoverBorderColor:"#DCDCDC",
                             pointHoverBorderWidth:2,
                             pointRadius:1,
                             pointHitRadius:10,
@@ -134,7 +134,7 @@
                     labels:["Max.Q (dynamic druk)", "Km/uur"],
                     datasets:[
                         {
-                            label: "My first database",
+                            label: "Max.Q druk",
                             fill: false,
                             backgroundColor:"#386363",
                             borderColor:"#4BC0C0",
@@ -148,7 +148,7 @@
                             pointBorderWidth:1,
                             pointHoverRadius:5,
                             pointHoverBackgroundColor:"#386363",
-                            pointHoverBorderColor:"#4BC0C0",
+                            pointHoverBorderColor:"#DCDCDC",
                             pointHoverBorderWidth:2,
                             pointRadius:1,
                             pointHitRadius:10,
@@ -182,7 +182,7 @@
                             pointBorderWidth:1,
                             pointHoverRadius:5,
                             pointHoverBackgroundColor:"#386363",
-                            pointHoverBorderColor:"rgba(220,220,220,1)",
+                            pointHoverBorderColor:"#DCDCDC",
                             pointHoverBorderWidth:2,
                             pointRadius:1,
                             pointHitRadius:10,
@@ -202,7 +202,7 @@
                             pointBorderWidth:1,
                             pointHoverRadius:5,
                             pointHoverBackgroundColor:"#1E3737",
-                            pointHoverBorderColor:"rgba(220,220,220,1)",
+                            pointHoverBorderColor:"#DCDCDC",
                             pointHoverBorderWidth:2,
                             pointRadius:1,
                             pointHitRadius:10,
@@ -237,8 +237,8 @@
                             pointBorderWidth:1,
                             pointHoverRadius:5,
                             pointHoverBackgroundColor:"#386363",
-                            pointHoverBorderColor:"#4BC0C0",
-                            pointHoverBorderWidth:1,
+                            pointHoverBorderColor:"#DCDCDC",
+                            pointHoverBorderWidth:2,
                             pointRadius:1,
                             pointHitRadius:10,
                             data:[49.5,77.5],
@@ -257,8 +257,8 @@
                             pointBorderWidth:1,
                             pointHoverRadius:5,
                             pointHoverBackgroundColor:"#1E3737",
-                            pointHoverBorderColor:"#4BC0C0",
-                            pointHoverBorderWidth:1,
+                            pointHoverBorderColor:"#DCDCDC",
+                            pointHoverBorderWidth:2,
                             pointRadius:1,
                             pointHitRadius:10,
                             data:[17,12],
@@ -291,7 +291,7 @@
                             pointBorderWidth:2,
                             pointHoverRadius:5,
                             pointHoverBackgroundColor:"#386363",
-                            pointHoverBorderColor:"rgba(220,220,220,1)",
+                            pointHoverBorderColor:"#DCDCDC",
                             pointHoverBorderWidth:2,
                             pointRadius:1,
                             pointHitRadius:10,
