--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <br><br><br><br><br>
         <div class="content">
             <div class="content_box0">
-                 <img src="mars.jpg">
-            </div>
+                 <img class="img" src="mars.jpg">
+            </div><br>
             <div class="content_box1">
                 <div class="row">
                     <div class="col">
