--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <script type="text/javascript">
             const PIECHART = document.getElementById("myFifthChart");
             let myFifthChart = new Chart(PIECHART , {
-                type:'pie',
+                type:'line',
                 data:{
                     labels:["looptijd", "verblijfsduur"],
                     datasets:[
