--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                             pointBackgroundColor: "#386363",
                             pointBorderWidth:1,
                             pointHoverRadius:5,
-                            pointHoverBackgroundColor:"#D1F6E1",
-                            pointHoverBorderColor:"##D1F6E1",
+                            pointHoverBackgroundColor:"#4BC0C0",
+                            pointHoverBorderColor:"#4BC0C0",
                             pointHoverBorderWidth:2,
                             pointRadius:1,
                             pointHitRadius:10,
