--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Challenge1</title>
+		<title>Challenge1IXT2</title>
 		<link type="text/css" href="styles/my_style.css"rel="stylesheet" />     
 	</head>
     <body>
